Console Sink Example in Spark

--- a/spark-playground/pom.xml
+++ b/spark-playground/pom.xml
@@ -27,6 +27,13 @@
             <artifactId>spark-sql_2.13</artifactId>
             <version>${apache-spark.version}</version>
         </dependency>
+        <!-- Spark Streaming -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.13</artifactId>
+            <version>${apache-spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
