--- a/spark-playground/pom.xml
+++ b/spark-playground/pom.xml
@@ -32,7 +32,11 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.12</artifactId>
             <version>${apache-spark.version}</version>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
+            <version>${apache-spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
